Update README.md
Add basic javafx application creation